# akaw

./: .prettierrc  biome.json  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
src/: App.tsx  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/app/: tray.rs  window.rs
src-tauri/src/aws/: aws_cli.rs  aws_config.rs  commands.rs  keyring_manager.rs  mfa.rs  mod.rs  models.rs  session.rs  session_config.rs  utils.rs
src-tauri/src/commands/: config.rs  fetch.rs
src-tauri/src/util/: config.rs  dirs.rs  formatter.rs  mod.rs  update.rs
src/assets/styles/: globals.css
src/components/apps/: AppItem.tsx  AppItemContext.tsx  index.ts
src/components/commands/: CommandItem.tsx  CommandItemContext.tsx  index.tsx
src/components/common/: Expander.tsx  Item.tsx  Page.tsx
src/components/common/ContextMenu/: ContextMenu.tsx  ContextMenuItem.tsx
src/components/home/: HomeUpdatePanel.tsx  index.tsx
src/components/layout/Header/: index.tsx
src/components/layout/Navigation/: NavigationButton.tsx  NavigationSearch.tsx  index.tsx
src/hooks/: useOnClickOutside.ts  useStickyState.ts
src/pages/Apps/: index.tsx
src/pages/Commands/: index.tsx
src/pages/Home/: index.tsx
src/services/: tauri.ts
src/services/api/: tauri.ts
src/stores/: config.tsx
src/types/: index.ts
src/util/: config.tsx
