[package]
name = "akaw"
version = "0.1.0"
description = "akaw"
authors = ["Bamboooz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.6"
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3", default-features = false, features = ["serde"] }
dirs = "6.0.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
rust-ini = "0.21.3"
totp-rs = "5.7.0"
url = "2.5.8"
rqrr = "0.10.0"
keyring = { version = "3.6.3", features = ["windows-native"] }
image = "0.25.9"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }
